--- a/Apps/W1/EDocument/app/app.json
+++ b/Apps/W1/EDocument/app/app.json
@@ -52,6 +52,11 @@
       "id": "8238f99b-cbe5-4b9c-b247-7771145b7470",
       "name": "E-Document Format for Factura-E",
       "publisher": "Microsoft"
+    },
+    {
+      "id": "8238f99b-cbe5-4b9c-1234-7771145b7470",
+      "name": "E-Document Format for PINT A-NZ",
+      "publisher": "Microsoft"
     }
   ],
   "screenshots": [],
