Adds ZUGFeRD electronic document import support
Implements structured format reader for processing ZUGFeRD electronic invoices and credit memos in PDF format.

Extracts XML data from PDF attachments and populates purchase document headers and lines with vendor information, amounts, dates, and line items.

Supports document type validation for invoices and credit notes with comprehensive error handling and telemetry logging.

Enables viewing imported documents through readable purchase document interface.

--- a/Apps/W1/EDocument/app/app.json
+++ b/Apps/W1/EDocument/app/app.json
@@ -37,6 +37,11 @@
       "id": "967eceac-106e-4102-b76a-fe5dc3d799e5",
       "name": "Payables Agent Tests",
       "publisher": "Microsoft"
+    },
+    {
+      "id": "fdeb586e-beff-49d8-947d-1e73ce980b34",
+      "name": "E-Document for Germany",
+      "publisher": "Microsoft"
     }
   ],
   "screenshots": [],
