--- a/Apps/W1/EnforcedDigitalVouchers/app/app.json
+++ b/Apps/W1/EnforcedDigitalVouchers/app/app.json
@@ -3,7 +3,7 @@
   "name": "Enforced Digital Vouchers",
   "publisher": "Microsoft",
   "brief": "The Digital Vouchers extension makes it easy to generate digital version for every general ledger register.",
-  "description": "In some countries authorities require to make sure that for every single general ledger register ther is a digital vouchers assigned.",
+  "description": "In some countries authorities require to make sure that for every single general ledger register there is a digital vouchers assigned.",
   "version": "28.0.0.0",
   "privacyStatement": "https://go.microsoft.com/fwlink/?LinkId=724009",
   "EULA": "https://go.microsoft.com/fwlink/?linkid=2009120",
@@ -11,7 +11,14 @@
   "url": "https://go.microsoft.com/fwlink/?LinkId=724011",
   "logo": "ExtensionLogo.png",
   "contextSensitiveHelpUrl": "https://go.microsoft.com/fwlink/?linkid=2204541",
-  "dependencies": [],
+  "dependencies": [
+    {
+        "id": "e1d97edc-c239-46b4-8d84-6368bdf67c8b",
+        "name": "E-Document Core",
+        "publisher": "Microsoft",
+        "version": "28.0.0.0"
+    }
+  ],
   "screenshots": [],
   "platform": "28.0.0.0",
   "internalsVisibleTo": [
