--- a/Apps/W1/EnforcedDigitalVouchers/app/app.json
+++ b/Apps/W1/EnforcedDigitalVouchers/app/app.json
@@ -13,10 +13,10 @@
   "contextSensitiveHelpUrl": "https://go.microsoft.com/fwlink/?linkid=2204541",
   "dependencies": [
     {
-        "id": "e1d97edc-c239-46b4-8d84-6368bdf67c8b",
-        "name": "E-Document Core",
-        "publisher": "Microsoft",
-        "version": "28.0.0.0"
+      "id": "e1d97edc-c239-46b4-8d84-6368bdf67c8b",
+      "name": "E-Document Core",
+      "publisher": "Microsoft",
+      "version": "28.0.0.0"
     }
   ],
   "screenshots": [],
@@ -25,6 +25,11 @@
     {
       "id": "928f7b70-0dbd-431a-beb5-f45c4adbd361",
       "name": "Enforced Digital Vouchers Test Library",
+      "publisher": "Microsoft"
+    },
+    {
+      "id": "f0eb8756-ea72-4ef8-b0de-686d2a44b259",
+      "name": "Enforced Digital Vouchers Tests",
       "publisher": "Microsoft"
     },
     {
